<resources>

    <string name="action_logout">Log Off</string>

    <string name="clientid_google">125283584089-u1mncju88o7o8frscrncnc4i5pn2iaib.apps.googleusercontent.com</string>

    <string name="app_name">AlphaFitness</string>
    <string name="title_activity_login">Sign in</string>
    <string name="facebook_app_id">1755423174675236</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="startworkout">Start Workout</string>
    <string name="stopworkout">Stop Workout</string>

    <string name="auth_failed">Authetication Failed</string>
    <string name="user_exists">User Already Exists...</string>
    <string name="male">Male</string>
    <string name="female">Female</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>
    <string name="starred_string">Starred</string>
    <string name="record_workout">Record Workout</string>
    <string name="Sign_out_string">Sign Out</string>
    <string name="sent_mail_string">Sent mail</string>
    <string name="draft_string">Drafts</string>
    <string name="subheader">Subheader</string>
    <string name="trash_string">Trash</string>
    <string name="all_mail_string">All mails</string>
    <string name="spam_string">Spams</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alpha_fitness">Alpha Fitness</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="login">Login</string>
    <string name="fitness_lessblack_min">"  "</string>
</resources>
